sandbox/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sample-http-app
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: sample-http-app
    spec:
      containers:
      - name: nginx-container
        image: nginx:alpine
        ports:
        - name: http-port
          containerPort: 80
        volumeMounts:
        - name: documentroot
          mountPath: /usr/share/nginx/html/
      volumes:
        - name: documentroot
          hostPath:
            path: /home/username/containers/web/html
